# peakypy

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: python-package.yml
src/peakypy/: 100_uM_As3As5_rep2.TXT  __init__.py  peakypy.py
tests/: test_pyicpms.py
